<resources>
    <string name="app_name">Interval Recorder</string>

    <string name="action_settings">Settings</string>
    <string name="out">Out</string>
    <string name="in">In</string>
    <string name="data_set">Data set</string>
    <string name="enter_data_set_request">Enter a data set name</string>
    <string name="warning">Warning</string>
    <string name="zero">0</string>
    <string name="delete_last_entry">Delete last entry</string>
    <string name="deleted_entry">Deleted entry</string>
    <string name="start">Start</string>
    <string name="data_set_name">Data set name</string>
    <string name="recent_data_sets">Recent data sets</string>
    <string name="countdown_initial">30</string>
</resources>
