<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:onClick="onStartButtonClicked"
            android:text="@string/start"
            android:textSize="@dimen/medium_button_text_size" />

        <TextView
            android:id="@+id/time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:padding="@dimen/large_button_padding"
            android:text="@string/countdown_initial"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>


    <TextView
        android:id="@+id/out_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:padding="@dimen/large_button_padding"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/count_text_size"
        app:layout_constraintBottom_toTopOf="@+id/out_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/in_count"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/in_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onInButtonClicked"
        android:padding="@dimen/large_button_padding"
        android:soundEffectsEnabled="false"
        android:text="@string/in"
        android:textSize="@dimen/large_button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/out_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/out_count" />


    <TextView
        android:id="@+id/in_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:padding="@dimen/large_button_padding"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/count_text_size"
        app:layout_constraintBottom_toTopOf="@+id/in_button"
        app:layout_constraintEnd_toStartOf="@+id/out_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/out_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onOutButtonClicked"
        android:padding="@dimen/large_button_padding"
        android:soundEffectsEnabled="false"
        android:text="@string/out"
        android:textSize="@dimen/large_button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/in_button"
        app:layout_constraintTop_toBottomOf="@+id/in_count" />


</android.support.constraint.ConstraintLayout>
